--- a/index.html
+++ b/index.html
@@ -132,9 +132,40 @@
               <div class="wrap-team">
                 <h3 class="team-subtitel">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
+                <div class="icons-team">
+                  <ul class="icons-list">
+                    <li class="social-icons">
+                      <a class="social-link" href="#">
+                        <svg class="instagram" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-icons">
+                      <a class="social-link" href="#">
+                        <svg class="twitter" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-icons">
+                      <a class="social-link" href="#">
+                        <svg class="facebook" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-icons">
+                      <a class="social-link" href="#">
+                        <svg class="linkedin" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
-
             <li class="team-item">
               <img
                 class="team-image"
@@ -146,9 +177,40 @@
               <div class="wrap-team">
                 <h3 class="team-subtitel">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
+                <div class="icons-team">
+                  <ul class="icons-list">
+                    <li class="social-icons">
+                      <a class="social-link" href="#">
+                        <svg class="instagram" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-icons">
+                      <a class="social-link" href="#">
+                        <svg class="twitter" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-icons">
+                      <a class="social-link" href="#">
+                        <svg class="facebook" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-icons">
+                      <a class="social-link" href="#">
+                        <svg class="linkedin" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
-
             <li class="team-item">
               <img
                 class="team-image"
@@ -160,9 +222,40 @@
               <div class="wrap-team">
                 <h3 class="team-subtitel">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
+                <div class="icons-team">
+                  <ul class="icons-list">
+                    <li class="social-icons">
+                      <a class="social-link" href="#">
+                        <svg class="instagram" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-icons">
+                      <a class="social-link" href="#">
+                        <svg class="twitter" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-icons">
+                      <a class="social-link" href="#">
+                        <svg class="facebook" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-icons">
+                      <a class="social-link" href="#">
+                        <svg class="linkedin" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
-
             <li class="team-item">
               <img
                 class="team-image"
@@ -174,6 +267,38 @@
               <div class="wrap-team">
                 <h3 class="team-subtitel">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
+                <div class="icons-team">
+                  <ul class="icons-list">
+                    <li class="social-icons">
+                      <a class="social-link" href="#">
+                        <svg class="instagram" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-icons">
+                      <a class="social-link" href="#">
+                        <svg class="twitter" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-icons">
+                      <a class="social-link" href="#">
+                        <svg class="facebook" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-icons">
+                      <a class="social-link" href="#">
+                        <svg class="linkedin" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
           </ul>
