--- a/index.html
+++ b/index.html
@@ -136,28 +136,28 @@
                 <ul class="icons-list">
                   <li class="social-icons">
                     <a class="social-link" href="#">
-                      <svg class="instagram" width="16" height="16">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-icons">
                     <a class="social-link" href="#">
-                      <svg class="twitter" width="16" height="16">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-icons">
                     <a class="social-link" href="#">
-                      <svg class="facebook" width="16" height="16">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-icons">
                     <a class="social-link" href="#">
-                      <svg class="linkedin" width="16" height="16">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -180,28 +180,28 @@
                 <ul class="icons-list">
                   <li class="social-icons">
                     <a class="social-link" href="#">
-                      <svg class="instagram" width="16" height="16">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-icons">
                     <a class="social-link" href="#">
-                      <svg class="twitter" width="16" height="16">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-icons">
                     <a class="social-link" href="#">
-                      <svg class="facebook" width="16" height="16">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-icons">
                     <a class="social-link" href="#">
-                      <svg class="linkedin" width="16" height="16">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -224,28 +224,28 @@
                 <ul class="icons-list">
                   <li class="social-icons">
                     <a class="social-link" href="#">
-                      <svg class="instagram" width="16" height="16">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-icons">
                     <a class="social-link" href="#">
-                      <svg class="twitter" width="16" height="16">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-icons">
                     <a class="social-link" href="#">
-                      <svg class="facebook" width="16" height="16">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-icons">
                     <a class="social-link" href="#">
-                      <svg class="linkedin" width="16" height="16">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -268,28 +268,28 @@
                 <ul class="icons-list">
                   <li class="social-icons">
                     <a class="social-link" href="#">
-                      <svg class="instagram" width="16" height="16">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-icons">
                     <a class="social-link" href="#">
-                      <svg class="twitter" width="16" height="16">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-icons">
                     <a class="social-link" href="#">
-                      <svg class="facebook" width="16" height="16">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-icons">
                     <a class="social-link" href="#">
-                      <svg class="linkedin" width="16" height="16">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -306,78 +306,122 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                class="portfolio-image"
-                src="./images/BankingApp.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="wrap-cover-text">
+                <img
+                  class="portfolio-image"
+                  src="./images/BankingApp.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <p class="cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="wrap-portfolio">
                 <h3 class="portfolio-subtitle">Banking App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-image"
-                src="./images/CashlessPayment.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="wrap-cover-text">
+                <img
+                  class="portfolio-image"
+                  src="./images/CashlessPayment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="wrap-portfolio">
                 <h3 class="portfolio-subtitle">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-image"
-                src="./images/MeditationApp.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="wrap-cover-text">
+                <img
+                  class="portfolio-image"
+                  src="./images/MeditationApp.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <p class="cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="wrap-portfolio">
                 <h3 class="portfolio-subtitle">Meditation App</h3>
                 <p class="portfolio-text">App</p>
+                <
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-image"
-                src="./images/TaxiService.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="wrap-cover-text">
+                <img
+                  class="portfolio-image"
+                  src="./images/TaxiService.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <p class="cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="wrap-portfolio">
                 <h3 class="portfolio-subtitle">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-image"
-                src="./images/ScreenIllustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="wrap-cover-text">
+                <img
+                  class="portfolio-image"
+                  src="./images/ScreenIllustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <p class="cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="wrap-portfolio">
                 <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-image"
-                src="./images/OnlineCourses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="wrap-cover-text">
+                <img
+                  class="portfolio-image"
+                  src="./images/OnlineCourses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <p class="cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="wrap-portfolio">
                 <h3 class="portfolio-subtitle">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
